--- a/Day1/style.css
+++ b/Day1/style.css
@@ -1,3 +1,18 @@
 body{
     background-color: aquamarine;
 }
+
+table{
+    background-color: blueviolet;
+    border-radius: 10px;
+    border-color: red;
+    border-style: groove;
+    border-width: 10px;
+    color: aliceblue;
+}
+
+h1{
+    background-color: chartreuse;
+    color: black;
+    text-align: center;
+}
